[package]
name = "carla-pcd-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
carla = "0.8.0"
clap = { version = "4.2.2", features = ["derive"] }
ctrlc = "3.2.5"
flume = "0.10.14"
fxhash = "0.2.1"
itertools = "0.10.5"
kiss3d = "0.35.0"
nalgebra = "0.32.2"
palette = "0.7.1"
pcd-rs = { version = "0.10.0", features = ["derive"] }
rand = "0.8.5"
rayon = "1.7.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
